- bug fix: spacer added, so that content doesnt get overlapped by navbar - animation added when navbar opened - bug fix: full screen navigation gets closed on large resizing

--- a/sections/ScreenCoverNavbar/ScreenCoverNavbar.module.css
+++ b/sections/ScreenCoverNavbar/ScreenCoverNavbar.module.css
@@ -1,15 +1,5 @@
 .cover {
-    background-color: white;
-    height: 100vh;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    transform: translateX(100%);
-    scale: 0;
-    /* display: none; */
-    transition: all .5s ease-in-out;
+    display: none;
 }
 
 .cover.open {
@@ -17,4 +7,114 @@
     z-index: 1;
     scale: 1;
     transform: translateX(0);
+}
+
+.tile {
+    padding: 10px 20px;
+    transition: all 0.1s ease-in-out;
+    opacity: 0.3;
+}
+
+/* utility classes for nth tile delay */
+.tile-1 {
+    transition-delay: 0.3s;
+    /* transform: translateX(100px); */
+
+}
+
+.tile-2 {
+    transition-delay: 0.4s;
+    /* transform: translateX(200px); */
+}
+
+.tile-3 {
+    transition-delay: 0.5s;
+    /* transform: translateX(300px); */
+}
+
+.tile-4 {
+    transition-delay: 0.6s;
+    /* transform: translateX(400px); */
+}
+
+.tile-5 {
+    transition-delay: 0.7s;
+    /* transform: translateX(500px); */
+}
+
+
+.cover.open .tile {
+    /* transform: translateX(0); */
+    opacity: 1;
+}
+
+.tileText {
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: left;
+    position: relative;
+}
+
+.tileText::after {
+    content: "";
+    background-color: #A41034;
+    height: 2.8px;
+    width: 0%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: all 0.25s ease-in-out;
+    bottom: -6px;
+    border-radius: 50px;
+}
+
+.tileText.active::after {
+    width: 80%;
+}
+
+
+.tileText:hover {
+    color: #A41034;
+}
+
+.tileText:hover::after {
+    width: 65%;
+}
+
+@keyframes slideIn {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+
+/* add media query for visibility */
+
+@media screen and (max-width: 768px) {
+    .cover {
+        background-color: white;
+        height: 100vh;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        transform: translateX(100%);
+        scale: 0;
+        /* display: none; */
+        transition: all .5s ease-in-out;
+
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 35px
+    }
 }
